# cooling-algorithms

./: .gitignore  README.md  TODO.md  pyproject.toml
cooling/: __init__.py  device.py  ed.py  f_ed.py  gates.py  measure.py  protocol.py  simulation.py
cooling/lattices/: __init__.py  base.py  chainlattice1D.py  graphlattice.py  latticebase.py  squarelattice2D.py  triangularlattice2D.py
cooling/measurements/: __init__.py  measure.py
cooling/models/: Heisenberg.py  Ising.py  Ising_old.py  XY.py  __init__.py  model.py  modelbase.py
cooling/noise/: __init__.py  basic.py
cooling/protocols/: __init__.py  balanced_pc.py  dynamical_pc.py  ground_pc.py  protocolbase.py
cooling/schedules/: __init__.py  randomized.py  schedulebase.py
examples/: example.ipynb  run_ising_2d_example.py
tebd/: README.md  example.sh  quimb_traj.py  ri_mps_cli.py
tests/: test_ed.ipynb
